Changes in version 1.6.0
------------------------

- Automatic 50bp interval padding.
- Added sub-clonal SNV state (SOMATIC.M0)
- Polished plots

PLANNED FEATURES 

- Support for indels.
- Better runtime performance by ignoring unlikely solutions early.  
- Better support for known, small deletions and amplifications (e.g. EGFRvIII,
  MYC)
- Better support for pool of normals.
- Switch to S4 data structures (maybe).
- Whole dataset visualizations (maybe).