@@ -588,6 +588,21 @@ dev.off()
 createCurationFile(file.curated.rds) 
 @
 
+\section{Cell lines}
+
+Default parameters assume some normal contamination. In 100\% pure samples such
+as cell lines, we for example cannot distinguish homozygous SNPs from LOH by
+looking at single allelic fractions alone. It is thus necessary to keep
+homozygous variants and include this uncertainty in the likelihood model. This
+is done by setting the \Rfunction{runAbsoluteCN} argument
+\Rcode{model.homozygous=TRUE}.  Note that in 100\% pure samples, we cannot
+distinguish private germline from mono-clonal somatic mutations either.
+
+For technical reasons, the maximum purity \Biocpkg{PureCN} currently models is
+0.99. We recommend setting \Rcode{test.purity=seq(0.9,0.99,by=0.01)} in
+\Rfunction{runAbsoluteCN} for cell lines.
+
+
 \section{Custom normalization and segmentation}
 \label{customseg}
 Copy number normalization and segmentation are crucial for obtaining good
@@ -955,10 +970,6 @@ necessarily have a higher call rate, since they tend to overfit noisy samples).
 Due to the lack of signal, manual curation is also recommended in low purity
 samples or very quiet genomes. 
 
-In the absence of matched normals, the software currently requires some normal
-contamination to infer germline genotypes. Since cell lines are rarely matched,
-\Biocpkg{PureCN} will likely not work well with cell line data.  
-
 Finally, the software currently does not officially support VCF files containing
 indels. Support for VCFs generated by \software{MuTect 2} that include both
 single nucleotide variants (SNVs) and indels is planned for Bioconductor 3.5.
@@ -1002,7 +1013,8 @@ complaints, etc. please do not hesitate to send us an email.
     fixed all warnings.
     \item If third-party segmentation tools are used, checked that normalized
     log-ratios are not biased, i.e. very similar compared to \Biocpkg{PureCN}
-    log-ratios (some pipelines already adjust for default normal contamination).
+    log-ratios (some pipelines already adjust for a default normal 
+    contamination).
 \end{itemize}
 
 \subsection{FAQ}
